[package]
name = "hyprui"
version = "0.1.0"
edition = "2024"
[workspace]
members = ["hyprui-rsml-compiler"]
[dependencies]
skia-safe = { version = "0.86.0", features = ["gl"] }
color-eyre = "0.6.3"
winit = { git = "https://github.com/SergioRibera/winit/", branch = "layer_shell", version = "0.30.12"}
glutin = { git = "https://github.com/coffeeispower/glutin", version = "0.32.3" }
glutin-winit = { git = "https://github.com/coffeeispower/glutin", version = "0.5.0" }
log = "0.4.27"
hyprui-rsml-compiler = { path = "hyprui-rsml-compiler" }
[dependencies.clay-layout]
features = ["debug"]
git = "https://github.com/coffeeispower/clay-rs"
branch = "tibs-version"

[dev-dependencies]
env_logger = "0.11.8"
